k8s-manifests/ai-middleware-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-middleware
  namespace: apps-anchieta-mobile-ios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-middleware
  template:
    metadata:
      labels:
        app: ai-middleware
    spec:
      imagePullSecrets:
        - name: nexus-pull-secret
      containers:
        - name: ai-middleware
          image: 192.168.1.33:5000/anchieta-mobile-ios-repository/api-ai:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8086
          resources:
            limits:
              memory: "512Mi"
            requests:
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ai-middleware
  namespace: apps-anchieta-mobile-ios
spec:
  ports:
    - port: 8086
      targetPort: 8086
  selector:
    app: ai-middleware
