k8s-manifests/login-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-api
  namespace: apps-anchieta-mobile-ios
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: login-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-api
  namespace: apps-anchieta-mobile-ios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-api
  template:
    metadata:
      labels:
        app: login-api
    spec:
      imagePullSecrets:
        - name: nexus-pull-secret
      containers:
        - name: login-api
          image: 192.168.1.33:5000/anchieta-mobile-ios-repository/api-login:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
            requests:
              memory: "256Mi"
