k8s-manifests/ai-middleware-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-middleware-ingress
  namespace: apps-anchieta-mobile-ios
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: anchieta-mobile-ios-ia.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-middleware
                port:
                  number: 8086
    - host: mobile-ios-ia.zani0x03.eti.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-middleware
                port:
                  number: 8086
