k8s-manifests/login-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-api-ingress
  namespace: apps-anchieta-mobile-ios
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: anchieta-mobile-ios-login.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: login-api
                port:
                  number: 8080
    - host: mobile-ios-login.zani0x03.eti.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: login-api
                port:
                  number: 8080
